Fix table background colors in dark mode

--- a/assets/styles/base.sass
+++ b/assets/styles/base.sass
@@ -573,6 +573,14 @@ html.post
         border-left-color: $dt-lighter-bg
         background-color: $dt-colored-bg
 
+      .content table
+        thead
+          border-bottom: 2px $dt-colored-bg solid
+
+        tbody
+          tr:nth-child(2n)
+            background-color: $dt-lighter-bg
+
     aside.aboutAuthor
       background-color: $dt-clear-bg
 
